Feat: Adicionado novas rotas e documentação no swagger
